--- a/.github/workflows/llm.yaml
+++ b/.github/workflows/llm.yaml
@@ -4,9 +4,6 @@ on:
   push:
     branches: [main]
 
-env:
-  IMAGE_TAG: ${{ github.sha }}
-
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
@@ -26,7 +23,10 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v2
 
       - name: Set IMAGE_URI
-        run: echo "IMAGE_URI=${{ steps.login-ecr.outputs.registry }}/${{ secrets.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}" >> $GITHUB_ENV
+        run: |
+          IMAGE_TAG =latest
+          IMAGE_URI="$ACCOUNT_ID.dkr.ecr.${AWS_REGION}.amazonaws.com/${{ secrets.ECR_REPOSITORY }}:$IMAGE_TAG"
+          echo "IMAGE_URI=$IMAGE_URI" >> $GITHUB_ENV
 
       - name: Build Docker image
         run: docker build -t $IMAGE_URI .
