--- a/kube-deployment.yaml
+++ b/kube-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: lora-inference
-          image: manifoldailearning/llm-lora:latest
+          image: manifoldailearning/lora-demo:latest # dockerhub
           ports:
             - containerPort: 8000
           envFrom:
